; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/configfs/extr_dir.c_configfs_d_iput.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/configfs/extr_dir.c_configfs_d_iput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { %struct.configfs_dirent* }
%struct.configfs_dirent = type { %struct.dentry* }
%struct.inode = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dentry*, %struct.inode*)* @configfs_d_iput to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @configfs_d_iput(%struct.dentry* %0, %struct.inode* %1) #0 {
  %3 = alloca %struct.dentry*, align 8
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.configfs_dirent*, align 8
  store %struct.dentry* %0, %struct.dentry** %3, align 8
  store %struct.inode* %1, %struct.inode** %4, align 8
  %6 = load %struct.dentry*, %struct.dentry** %3, align 8
  %7 = getelementptr inbounds %struct.dentry, %struct.dentry* %6, i32 0, i32 0
  %8 = load %struct.configfs_dirent*, %struct.configfs_dirent** %7, align 8
  store %struct.configfs_dirent* %8, %struct.configfs_dirent** %5, align 8
  %9 = load %struct.configfs_dirent*, %struct.configfs_dirent** %5, align 8
  %10 = icmp ne %struct.configfs_dirent* %9, null
  br i1 %10, label %11, label %23

11:                                               ; preds = %2
  %12 = load %struct.configfs_dirent*, %struct.configfs_dirent** %5, align 8
  %13 = getelementptr inbounds %struct.configfs_dirent, %struct.configfs_dirent* %12, i32 0, i32 0
  %14 = load %struct.dentry*, %struct.dentry** %13, align 8
  %15 = load %struct.dentry*, %struct.dentry** %3, align 8
  %16 = icmp ne %struct.dentry* %14, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @BUG_ON(i32 %17)
  %19 = load %struct.configfs_dirent*, %struct.configfs_dirent** %5, align 8
  %20 = getelementptr inbounds %struct.configfs_dirent, %struct.configfs_dirent* %19, i32 0, i32 0
  store %struct.dentry* null, %struct.dentry** %20, align 8
  %21 = load %struct.configfs_dirent*, %struct.configfs_dirent** %5, align 8
  %22 = call i32 @configfs_put(%struct.configfs_dirent* %21)
  br label %23

23:                                               ; preds = %11, %2
  %24 = load %struct.inode*, %struct.inode** %4, align 8
  %25 = call i32 @iput(%struct.inode* %24)
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @configfs_put(%struct.configfs_dirent*) #1

declare dso_local i32 @iput(%struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
